Working version
---------------

### Language features:

### Runtime system:

### Code generation and optimizations:

### Standard library:

- #11128: Add In_channel.isatty, Out_channel.isatty.
  (Nicolás Ojeda Bär, review by Gabriel Scherer and Florian Angeletti)

### Other libraries:

### Tools:

### Manual and documentation:

### Compiler user-interface and warnings:

### Internal/compiler-libs changes:

### Build system:

### Bug fixes:

OCaml 5.0
---------

### Language features:

### Runtime system:
- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the
  runtime will not remove the runtime events ring buffers at exit. This
  makes tracing very short running programs more reliable.
  (Sadiq Jaffer, review by KC Sivaramakrishnan)

- #10964: Ring-buffer based runtime tracing (runtime_events)
  Runtime_events is a very low overhead runtime tracing system designed for
  continuous monitoring of OCaml applications.
  (Sadiq Jaffer, review by Anil Madhavapeddy, Enguerrand Decorne,
  Richard Warburton, Gabriel Scherer, Sabine Schmaltz, Florian Angeletti,
  Patrick Ferris, Tom Kelly)

- #10831: Multicore OCaml
  (The multicore team, caml-devel and more)

* #10723: do not use `-flat-namespace` linking for macOS.
  (Carlo Cabrera, review by Damien Doligez)

* #10863, #10933: Remove support for old, unprefixed C runtime function names
  such as `alloc`.  The new names prefixed with `caml_` must be used instead,
  such as `caml_alloc`.  Consequently, it is no longer needed to define
  `CAML_NAME_SPACE` to avoid bringing unprefixed names into scope: this is now
  the default behavior.
  (Nicolás Ojeda Bär, review by Xavier Leroy)

- #10902: Do not register empty code fragments in natdynlink.
  (David Allsopp, review by Xavier Leroy and Damien Doligez)

- #10965: `caml_fatal_error_hook`, GC timing hooks, and
  `caml_scan_roots_hook` are now atomic variables. Restore GC timing